disabled selection in menu and fixed z-index

--- a/components/menu/menuentry.module.css
+++ b/components/menu/menuentry.module.css
@@ -3,6 +3,7 @@
     padding: 0 16px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.03);
     white-space: nowrap;
+    user-select: none;
 }
 
 .container:hover {
