--- a/components/menu/submenu.module.css
+++ b/components/menu/submenu.module.css
@@ -22,6 +22,7 @@
     padding: 0 16px;
     display: block;
     background-color: rgba(0, 0, 0, 0.03);
+    user-select: none;
 }
 
 .containerTitle:hover {
